changed the message

--- a/src/AzSK/Framework/Configurations/AzSKInfo/SecurityRecommendationReport.html
+++ b/src/AzSK/Framework/Configurations/AzSKInfo/SecurityRecommendationReport.html
@@ -10,7 +10,7 @@
             <img id="logo" src="https://azsk.azurewebsites.net/Images/Icons/AzSK_Logo.png" alt><span class="header">Cloud App Resource Recommendation Report </span>
     </div>
     <div class="message">
-        <p>This report provides a list of recommendations for resource combinations which are similar to the one provided by the user. The report is generated based on data analysis of historical security scans performed by the DevOps Kit (AzSK). </p>  
+        <p>This report provides a list of recommendations for resource combinations which are similar to the one provided by you. The report is generated based on data analysis of historical security scans performed by the DevOps Kit (AzSK). </p>  
         <p>The recommended combinations are ranked on the basis of 'failure rate'. This represents the average number of security control failures (of all severity) observed across all instances in use for that combination. </p>  
         <p>Based on how the current combination fares vis-a-vis other combinations in this list, you can consider switching to one that has a lower 'failure rate' (assuming that your use cases can be accomplished using features available in that combination).</p>
     </div> 
