minor changes to rec engine

--- a/src/AzSK/Framework/Configurations/AzSKInfo/SecurityRecommendationReport.html
+++ b/src/AzSK/Framework/Configurations/AzSKInfo/SecurityRecommendationReport.html
@@ -45,8 +45,9 @@
         <tr><div class="dataPoint" id="ccf"><td> Current Combination Features:</td> <td>[#cgF#]</td></div></tr>
         <tr><div class="dataPoint" id="ccc"> <td>Current Combination Categories: </td><td>[#cgC#]</td></div></tr>
         <tr><div class="dataPoint" id="measures"> <td>Measures:</td><td> [Total Pass: [#cgPass#]] [Total Fail: [#cgFail#]] </td></div></tr>
-         
-        <tr><div class="dataPoint" id="ccc"> <td>Failure Rate : </td><td>[#frate#]</td></div></tr>
+        <tr><div class="dataPoint" id="up"> <td>Usage Percentage:</td><td>[#up#]</td></div></tr>
+        <tr><div class="dataPoint" id="fr"> <td>Failure Rate: </td><td>[#frate#]</td></div></tr>
+        <tr><div class="dataPoint" id="omu"> <td>SimilarCombinations : </td><td>[#omu#]</td></div></tr>
     </table>
         
     <div>
