ADO renaming changes plus multi prj scan bug fixed

--- a/src/SecureAzureDevOpsExtension/OrgLevelSecuritySummary.html
+++ b/src/SecureAzureDevOpsExtension/OrgLevelSecuritySummary.html
@@ -126,7 +126,7 @@
 		// Get widget load
 		VSS.require("TFS/Dashboards/WidgetHelpers", function (WidgetHelpers) {
 			WidgetHelpers.IncludeWidgetStyles();
-			VSS.register("OrgLevelTemp_Old", function () {
+			VSS.register("OrgLevelSecuritySummary", function () {
 				return {
 					load: function (widgetSettings) {
 						return WidgetHelpers.WidgetStatusHelper.Success();
